# x402-playground

./: CLAUDE.md
.github/workflows/: deploy.yml
backend/: config.py  crypto.py  main.py  pyproject.toml
backend/routes/: facilitator.py  server.py
backend/tests/: conftest.py  helpers.py  test_crypto.py  test_facilitator.py  test_server.py
docs/superpowers/plans/: 2026-04-16-x402-demo.md
docs/superpowers/specs/: 2026-04-16-x402-demo-design.md
frontend/: CNAME  app.js  index.html  style.css
nginx/: x402-backend.service  x402.conf
